# wi-fi

./: Cargo.toml  README.md  install  test_config  wi-fi  wpa_supplicant.conf
freebsd/: Cargo.toml  build_release  example_config  install
freebsd/src/: main.rs
linux/: example_config  install  wi-fi
src/: main.rs
